--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "standard && jest",
-    "start": "barnard59 run "
+    "start": "barnard59 run --format text/turtle pipelines/blv-tierseuchen.ttl"
   },
   "repository": {
     "type": "git",
@@ -19,6 +19,11 @@
   "homepage": "https://github.com/zazuko/blv-tierseuchen-ld#readme",
   "dependencies": {
     "barnard59-main": "git+https://github.com/tpluscode/barnard59-main.git#npm-bin",
+    "node-stream-zip": "^1.7.0",
     "rdf-parser-csvw": "git+https://github.com/rdf-ext/rdf-parser-csvw.git#develop"
+  },
+  "devDependencies": {
+    "standard": "^12.0.1",
+    "unzipper": "^0.9.4"
   }
 }
