Work from folder (#5)
* added pipeline to just download and extract zip

* work on pipeline which iterates and processes file

* use latest forEach step

* add a pipeline combining download and process

* update readme, tweak scripts

* remove through2

* further improve scripts

--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "standard && jest",
-    "start": "mkdir -p target; barnard59 run --format text/turtle pipelines/blv-tierseuchen.ttl --pipeline urn:pipeline:tierseuchen-ld#Root"
+    "start": "mkdir -p target source; barnard59 run --format text/turtle pipelines/blv-tierseuchen.ttl",
+    "pipeline": "npm start -- --pipeline"
   },
   "repository": {
     "type": "git",
