--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
   "dependencies": {
     "barnard59-core": "git+https://github.com/zazuko/barnard59-core.git",
     "barnard59-main": "git+https://github.com/zazuko/barnard59-main.git#master",
+    "node-fetch": "^2.6.0",
+    "rdf-ext": "^1.3.0",
     "rdf-parser-csvw": "git+https://github.com/rdf-ext/rdf-parser-csvw.git#develop",
     "unzipper": "^0.9.11"
   },
