This now kills the new output

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -9,7 +9,7 @@ pipeline_build:
   stage: build
   script:
     - npm run start
-    - npm run clean-nt
+#    - npm run clean-nt
   artifacts:
     paths:
       - target/everything.nt
