Remove IP logging again

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,7 +1,7 @@
 image: zazukoians/node-java-jena
 before_script:
   - npm install
-  - curl https://ipinfo.io/ip
+#  - curl https://ipinfo.io/ip
 
 stages:
   - build
