--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "barnard59-tdb": "git+https://github.com/zazuko/barnard59-tdb.git",
     "node-fetch": "^2.6.0",
     "rdf-ext": "^1.3.0",
-    "unzipper": "^0.9.11"
+    "unzipper": "^0.9.11",
+    "url-slug": "^2.2.0"
   },
   "devDependencies": {
     "standard": "^12.0.1"
