--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,5 +1,11 @@
 image: zazukoians/node-java-jena
 before_script:
+# SSH Key Setup, see https://docs.gitlab.com/ee/ci/ssh_keys/
+  - eval $(ssh-agent -s)
+  - echo "$SSH_PRIVATE_KEY" | tr -d '\r' | ssh-add -
+  - mkdir -p ~/.ssh
+  - chmod 700 ~/.ssh
+# end SSH
   - npm install
 #  - curl https://ipinfo.io/ip
 
