Use postinstall instead

--- a/package.json
+++ b/package.json
@@ -4,11 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "standard && jest",
-    "start": "mkdir -p target source; barnard59 run --pipeline urn:pipeline:tierseuchen-ld#Root --format text/turtle pipelines/blv-tierseuchen.ttl",
-    "startFile": "mkdir -p target source; barnard59 run --pipeline urn:pipeline:tierseuchen-ld#RootFile --format text/turtle pipelines/blv-tierseuchen.ttl",
-    "clean-nt": "rm -f target/everything.nt && cat target/*.nt | sed '/_:/d' | sed '/<file/d' | sed '/#(No/d' | sed '/NULL/d'  > target/everything.nt",
-    "pipeline": "npm start -- --pipeline",
+    "postinstall": "mkdir -p source && mkdir -p target ",
     "animalpest-pipeline-file": "barnard59 run -v --format text/turtle --pipeline=urn:pipeline:tierseuchen-ld#RootFile pipelines/blv-tierseuchen.ttl",
     "animalpest-pipeline-test": "barnard59 run -v --variable=\"endpoint=https://stardog-test.cluster.ldbar.ch/lindas\" --variable=\"user=$STARDOG_USERNAME\" --variable=\"password=$STARDOG_PASSWORD_TEST\" --format text/turtle --pipeline=urn:pipeline:tierseuchen-ld#Root pipelines/blv-tierseuchen.ttl",
     "animalpest-pipeline-int": "barnard59 run -v --variable=\"endpoint=https://stardog-int.cluster.ldbar.ch/lindas\" --variable=\"user=$STARDOG_USERNAME\" --variable=\"password=$STARDOG_PASSWORD_INT\" --format text/turtle --pipeline=urn:pipeline:tierseuchen-ld#Root pipelines/blv-tierseuchen.ttl",
@@ -18,7 +14,7 @@
     "type": "git",
     "url": "git://github.com/zazuko/blv-tierseuchen-ld.git"
   },
-  "author": "Tomasz Pluskiewicz <tomasz@t-code.pl>",
+  "author": "Zazuko GmbH",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/zazuko/blv-tierseuchen-ld/issues"
