--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,6 +6,7 @@ before_script:
   - mkdir -p ~/.ssh
   - chmod 700 ~/.ssh
 # end SSH
+  - sftp isceco-pr@sftp.zazukoians.org:upload/InfoSM.zip .
   - npm install
 
 stages:
