--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,10 +3,8 @@ before_script:
 # SSH Key Setup, see https://docs.gitlab.com/ee/ci/ssh_keys/
   - eval $(ssh-agent -s)
   - echo "$SSH_PRIVATE_KEY" | tr -d '\r' | ssh-add -
-  - touch ~/.ssh/known_hosts
+  - mkdir -m 700 -p ~/.ssh
   - echo "sftp.zazukoians.org ssh-ed25519 AAAAC3NzaC1lZDI1NTE5AAAAICQreGG5LpFFP/aOow7i3IGIYF4xq+6dYocwZTgawmIa" > ~/.ssh/known_hosts
-  - mkdir -p ~/.ssh
-  - chmod 700 ~/.ssh
 # end SSH
   - sftp isceco-pr@sftp.zazukoians.org:upload/InfoSM.zip .
   - npm install
