--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -15,6 +15,6 @@ stages:
 pipeline_build:
   stage: build
   script:
-#    - npm run animalpest-pipeline-test
+    - npm run animalpest-pipeline-test
     - ./scripts/put.sh
 
