--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "dotenv-cli": "^3.1.0",
     "node-fetch": "^2.6.0",
     "parallel-transform": "^1.2.0",
+    "polly-js": "^1.6.5",
     "rdf-ext": "^1.3.0",
     "unzipper": "^0.9.11",
     "url-slug": "^2.2.0"
