ci: gitlab CI should run on test env

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -9,7 +9,9 @@ pipeline_build:
   tags:
     - medium
   stage: build
+  environment:
+    name: TEST
   script:
-    - npm run animalpest-pipeline-test
+    - npm run animalpest-pipeline
     - ./scripts/put.sh
 
