--- a/package.json
+++ b/package.json
@@ -19,19 +19,19 @@
   },
   "homepage": "https://github.com/zazuko/blv-tierseuchen-ld#readme",
   "dependencies": {
-    "barnard59": "0.1.0",
-    "barnard59-formats": "0.0.7",
-    "barnard59-ftp": "git+https://github.com/zazuko/barnard59-ftp.git#master",
-    "barnard59-graph-store": "0.0.6",
-    "barnard59-tdb": "git+https://github.com/zazuko/barnard59-tdb.git",
+    "barnard59": "^0.1.0",
+    "barnard59-formats": "^0.0.7",
+    "barnard59-ftp": "^0.0.1",
+    "barnard59-graph-store": "^0.0.6",
+    "barnard59-tdb": "^0.0.1",
     "dotenv": "^8.2.0",
     "dotenv-cli": "^3.2.0",
-    "node-fetch": "^2.6.0",
+    "node-fetch": "^2.6.1",
     "parallel-transform": "^1.2.0",
-    "polly-js": "^1.6.6",
+    "polly-js": "^1.6.8",
     "rdf-ext": "^1.3.0",
     "unzipper": "^0.9.11",
-    "url-slug": "^2.2.0"
+    "url-slug": "^2.3.2"
   },
   "devDependencies": {
     "standard": "^12.0.1"
