--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,13 +6,24 @@ before_script:
 stages:
   - build
 
-pipeline_build:
+pipeline_build_prod:
+  only:
+    - master
   tags:
     - medium
   stage: build
   environment:
-    name: TEST
+    name: PROD
   script:
     - npm run animalpest-pipeline
-    - ./scripts/put.sh
 
+pipeline_build_int:
+  only:
+    - develop
+  tags:
+    - medium
+  stage: build
+  environment:
+    name: INT
+  script:
+    - npm run animalpest-pipeline
